--- a/package.json
+++ b/package.json
@@ -7,10 +7,14 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^4.6.0",
+    "chart.js": "^2.9.4",
     "classnames": "^2.2.6",
+    "d3-geo": "^2.0.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
+    "react-chartjs-2": "^2.11.1",
     "react-component-queries": "^2.3.0",
+    "react-d3-map": "^0.8.3",
     "react-dom": "^17.0.1",
     "react-icons": "^4.2.0",
     "react-infinite-calendar": "^2.3.1",
